--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GuildPower Tracker Pro</title>
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
-
-  <!-- Tailwind, Chart.js, Feather Icons, Vanta -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&family=Inter:wght@300;400;500;600;700&display=swap');
     .medieval-font { font-family: 'MedievalSharp', cursive; }
@@ -69,6 +64,8 @@
 <section id="dashboard" class="py-16 bg-gray-800">
   <div class="container mx-auto px-6">
     <h2 class="text-3xl font-bold mb-12 text-center medieval-font">Guild Overview</h2>
+
+    <!-- Stats Cards -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-12">
       <div class="bg-gray-700 rounded-xl p-6 shadow-lg">
         <div class="flex items-center justify-between">
@@ -101,7 +98,7 @@
         <div class="flex items-center justify-between">
           <div>
             <p class="text-gray-400">Active Classes</p>
-            <p class="text-3xl font-bold" id="active-classes">0</p>
+            <p class="text-3xl font-bold" id="active-classes">0/0</p>
           </div>
           <i data-feather="shield" class="text-blue-400"></i>
         </div>
@@ -118,38 +115,6 @@
   </div>
 </section>
 
-<!-- Members Section -->
-<section id="members" class="py-16 bg-gray-900">
-  <div class="container mx-auto px-6">
-    <h2 class="text-3xl font-bold mb-12 text-center medieval-font">Guild Members</h2>
-
-    <!-- Class Filter -->
-    <div class="flex flex-wrap gap-2 mb-8 justify-center">
-      <button class="class-badge bg-gray-600 hover:bg-gray-500 text-white">All Classes</button>
-      <button class="class-badge bg-red-500 hover:bg-red-600 text-white">Bare Hand</button>
-      <button class="class-badge bg-blue-500 hover:bg-blue-600 text-white">Sword & Shield</button>
-      <button class="class-badge bg-purple-500 hover:bg-purple-600 text-white">Battle Staff</button>
-      <button class="class-badge bg-green-500 hover:bg-green-600 text-white">Battle Shield</button>
-      <button class="class-badge bg-yellow-500 hover:bg-yellow-600 text-gray-900">Great Sword</button>
-      <button class="class-badge bg-indigo-500 hover:bg-indigo-600 text-white">Staff</button>
-      <button class="class-badge bg-pink-500 hover:bg-pink-600 text-white">Dagger</button>
-      <button class="class-badge bg-teal-500 hover:bg-teal-600 text-white">Bow</button>
-      <button class="class-badge bg-orange-500 hover:bg-orange-600 text-white">Crossbow</button>
-    </div>
-
-    <!-- Members Grid -->
-    <div id="members-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="bg-gray-800 py-8 border-t border-gray-700">
-  <div class="container mx-auto px-6 text-center">
-    <p class="text-gray-400">&copy; 2024 GuildPower Tracker Pro. Forge your legacy!</p>
-  </div>
-</footer>
-
-<!-- Scripts -->
 <script>
   // Initialize Firebase
   const firebaseConfig = {
@@ -177,7 +142,6 @@
     backgroundColor: 0x667eea
   });
 
-  // Feather Icons
   feather.replace();
 
   // Mobile menu toggle
@@ -195,11 +159,64 @@
     nav.classList.toggle('space-y-4');
   });
 
-  // Load members from Firebase
-  const membersContainer = document.getElementById('members-list');
+  // --- Dynamic Dashboard Stats ---
   db.collection("members").get().then(snapshot => {
-    snapshot.forEach(doc => {
-      const m = doc.data();
+    const members = snapshot.docs.map(doc => doc.data());
+    const totalMembers = members.length;
+    document.getElementById('total-members').textContent = totalMembers;
+
+    const avgCP = members.reduce((sum, m) => sum + m.cp, 0) / totalMembers || 0;
+    document.getElementById('avg-cp').textContent = Math.round(avgCP).toLocaleString();
+
+    const topGrowth = members.reduce((max, m) => m.growth > max ? m.growth : max, 0);
+    document.getElementById('top-growth').textContent = topGrowth.toLocaleString();
+
+    const classesSet = new Set(members.map(m => m.class));
+    document.getElementById('active-classes').textContent = classesSet.size + "/" + 10; // assuming 10 classes
+  });
+</script>
+
+
+<!-- Members Section -->
+<section id="members" class="py-16 bg-gray-900">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-12 text-center medieval-font">Guild Members</h2>
+
+    <!-- Class Filter -->
+    <div class="flex flex-wrap gap-2 mb-8 justify-center">
+      <button class="class-badge bg-gray-600 hover:bg-gray-500 text-white" data-class="All">All Classes</button>
+      <button class="class-badge bg-red-500 hover:bg-red-600 text-white" data-class="Bare Hand">Bare Hand</button>
+      <button class="class-badge bg-blue-500 hover:bg-blue-600 text-white" data-class="Sword & Shield">Sword & Shield</button>
+      <button class="class-badge bg-purple-500 hover:bg-purple-600 text-white" data-class="Battle Staff">Battle Staff</button>
+      <button class="class-badge bg-green-500 hover:bg-green-600 text-white" data-class="Battle Shield">Battle Shield</button>
+      <button class="class-badge bg-yellow-500 hover:bg-yellow-600 text-gray-900" data-class="Great Sword">Great Sword</button>
+      <button class="class-badge bg-indigo-500 hover:bg-indigo-600 text-white" data-class="Staff">Staff</button>
+      <button class="class-badge bg-pink-500 hover:bg-pink-600 text-white" data-class="Dagger">Dagger</button>
+      <button class="class-badge bg-teal-500 hover:bg-teal-600 text-white" data-class="Bow">Bow</button>
+      <button class="class-badge bg-orange-500 hover:bg-orange-600 text-white" data-class="Crossbow">Crossbow</button>
+    </div>
+
+    <!-- Members Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="members-list">
+      <!-- Member cards will be generated dynamically -->
+    </div>
+  </div>
+</section>
+
+<script>
+  // --- Fetch Members from Firebase and display dynamically ---
+  db.collection("members").get().then(snapshot => {
+    const members = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+
+    // Find max CP for progress bar normalization
+    const maxCP = Math.max(...members.map(m => m.cp));
+
+    const membersContainer = document.getElementById('members-list');
+    membersContainer.innerHTML = ''; // Clear container
+
+    members.forEach(m => {
+      const progressPercent = Math.min((m.cp / maxCP) * 100, 100);
+
       const card = document.createElement('div');
       card.className = 'bg-gray-800 rounded-xl p-6 shadow-lg hover:shadow-xl transition-all';
       card.innerHTML = `
@@ -221,36 +238,243 @@
             <span class="text-green-400">+${m.growth.toLocaleString()}</span>
           </div>
           <div class="w-full bg-gray-700 rounded-full h-2">
-            <div class="cp-progress-bar bg-green-500 h-2 rounded-full" style="width: ${(m.growth / m.cp * 100).toFixed(0)}%"></div>
+            <div class="cp-progress-bar bg-green-500 h-2 rounded-full" style="width: ${progressPercent.toFixed(0)}%"></div>
           </div>
         </div>
-        <a href="members-detail.html?id=${m.id}">
-          <button class="w-full bg-gray-700 hover:bg-gray-600 py-2 rounded-lg transition-colors">
-            View Progress
+        <div class="flex flex-col gap-2">
+          <a href="members-detail.html?id=${m.id}">
+            <button class="w-full bg-gray-700 hover:bg-gray-600 py-2 rounded-lg transition-colors">
+              View Progress
+            </button>
+          </a>
+          <button onclick="deleteMember('${m.id}')" class="w-full bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg transition-colors">
+            Delete Member
           </button>
-        </a>
+        </div>
       `;
       membersContainer.appendChild(card);
     });
-    feather.replace();
+
+    feather.replace(); // refresh icons
   });
 
-  // Guild Progress Chart (static example, replace with Firebase if desired)
-  const guildCtx = document.getElementById('guildProgressChart').getContext('2d');
-  new Chart(guildCtx, {
-    type: 'line',
-    data: {
-      labels: ['Week 1','Week 2','Week 3','Week 4','Week 5'],
-      datasets: [{
-        label: 'Average Guild CP',
-        data: [10500,11200,11800,12457,13100],
-        borderColor: '#fbbf24',
-        backgroundColor: 'rgba(251, 191, 36, 0.1)',
-        tension: 0.4,
-        fill: true
-      }]
-    },
-    options: { responsive:true, maintainAspectRatio:false, plugins:{legend:{display:false}}, scales:{y:{grid:{color:'rgba(255,255,255,0.1)'}}, x:{grid:{color:'rgba(255,255,255,0.1)'}}} }
+  // --- Filter Members by Class ---
+  const filterButtons = document.querySelectorAll('.class-badge[data-class]');
+  filterButtons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const selectedClass = btn.dataset.class;
+      document.querySelectorAll('#members-list > div').forEach(card => {
+        if (selectedClass === "All" || card.querySelector('.class-badge').textContent === selectedClass) {
+          card.style.display = '';
+        } else {
+          card.style.display = 'none';
+        }
+      });
+    });
+  });
+
+  // --- Delete Member Function ---
+  function deleteMember(memberId) {
+    if (!confirm('Are you sure you want to delete this member?')) return;
+    db.collection('members').doc(memberId).delete()
+      .then(() => {
+        alert('Member deleted successfully!');
+        location.reload();
+      })
+      .catch(err => alert('Error deleting member: ' + err));
+  }
+</script>
+
+<!-- Leaderboards Section -->
+<section id="leaderboards" class="py-16 bg-gray-800">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-12 text-center medieval-font">Leaderboards</h2>
+
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+      <!-- Total CP Leaderboard -->
+      <div class="bg-gray-700 rounded-xl p-6 shadow-lg">
+        <h3 class="text-xl font-bold mb-6 flex items-center">
+          <i data-feather="crown" class="mr-2 text-yellow-400"></i>
+          Total CP Ranking
+        </h3>
+        <div id="total-cp-ranking" class="space-y-4"></div>
+      </div>
+
+      <!-- Weekly Growth Leaderboard -->
+      <div class="bg-gray-700 rounded-xl p-6 shadow-lg">
+        <h3 class="text-xl font-bold mb-6 flex items-center">
+          <i data-feather="trending-up" class="mr-2 text-green-400"></i>
+          Weekly Growth Ranking
+        </h3>
+        <div id="weekly-growth-ranking" class="space-y-4"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+  // --- Dynamic Leaderboards from Firebase ---
+  db.collection("members").get().then(snapshot => {
+    const members = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+
+    const totalCPContainer = document.getElementById('total-cp-ranking');
+    const growthContainer = document.getElementById('weekly-growth-ranking');
+
+    // --- Total CP Ranking ---
+    const sortedByCP = [...members].sort((a, b) => b.cp - a.cp);
+    totalCPContainer.innerHTML = '';
+    sortedByCP.forEach((m, index) => {
+      const rankDiv = document.createElement('div');
+      rankDiv.className = 'flex items-center justify-between p-4 bg-gray-600 rounded-lg';
+      rankDiv.innerHTML = `
+        <div class="flex items-center space-x-3">
+          <span class="text-yellow-400 font-bold text-lg">${index + 1}</span>
+          <img src="${m.avatar}" alt="${m.name}" class="w-10 h-10 rounded-full">
+          <div>
+            <p class="font-bold">${m.name}</p>
+            <span class="class-badge ${m.classColor} text-white">${m.class}</span>
+          </div>
+        </div>
+        <span class="text-xl font-bold">${m.cp.toLocaleString()}</span>
+      `;
+      totalCPContainer.appendChild(rankDiv);
+    });
+
+    // --- Weekly Growth Ranking ---
+    const sortedByGrowth = [...members].sort((a, b) => b.growth - a.growth);
+    growthContainer.innerHTML = '';
+    sortedByGrowth.forEach((m, index) => {
+      const rankDiv = document.createElement('div');
+      rankDiv.className = 'flex items-center justify-between p-4 bg-gray-600 rounded-lg';
+      rankDiv.innerHTML = `
+        <div class="flex items-center space-x-3">
+          <span class="text-yellow-400 font-bold text-lg">${index + 1}</span>
+          <img src="${m.avatar}" alt="${m.name}" class="w-10 h-10 rounded-full">
+          <div>
+            <p class="font-bold">${m.name}</p>
+            <span class="class-badge ${m.classColor} text-white">${m.class}</span>
+          </div>
+        </div>
+        <span class="text-xl font-bold text-green-400">+${m.growth.toLocaleString()}</span>
+      `;
+      growthContainer.appendChild(rankDiv);
+    });
+
+    feather.replace(); // refresh icons
+  });
+</script>
+
+
+<!-- Admin Section -->
+<section id="admin" class="py-16 bg-gray-900">
+  <div class="container mx-auto px-6">
+    <h2 class="text-3xl font-bold mb-12 text-center medieval-font">Admin Dashboard</h2>
+
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+      <!-- Add Member Form -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-lg">
+        <h3 class="text-xl font-bold mb-6">Add New Member</h3>
+        <form id="add-member-form" class="space-y-4">
+          <input type="text" id="member-name" placeholder="Member Name" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 focus:outline-none focus:border-yellow-400" required>
+          <select id="member-class" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 focus:outline-none focus:border-yellow-400" required>
+            <option value="">Select Class</option>
+            <option value="Bare Hand">Bare Hand</option>
+            <option value="Sword & Shield">Sword & Shield</option>
+            <option value="Battle Staff">Battle Staff</option>
+            <option value="Battle Shield">Battle Shield</option>
+            <option value="Great Sword">Great Sword</option>
+            <option value="Staff">Staff</option>
+            <option value="Dagger">Dagger</option>
+            <option value="Bow">Bow</option>
+            <option value="Crossbow">Crossbow</option>
+          </select>
+          <input type="number" id="member-cp" placeholder="Initial CP" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 focus:outline-none focus:border-yellow-400" required>
+          <input type="text" id="member-avatar" placeholder="Avatar URL" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 focus:outline-none focus:border-yellow-400">
+          <button type="submit" class="w-full bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-3 rounded-lg transition-colors">
+            Add Member
+          </button>
+        </form>
+      </div>
+
+      <!-- CSV Import -->
+      <div class="bg-gray-800 rounded-xl p-6 shadow-lg">
+        <h3 class="text-xl font-bold mb-6">Bulk Import CP Data</h3>
+        <div class="space-y-4">
+          <div class="border-2 border-dashed border-gray-600 rounded-lg p-8 text-center">
+            <i data-feather="upload-cloud" class="mx-auto text-gray-400 mb-2"></i>
+            <p class="text-gray-400 mb-4">Upload CSV file with members data</p>
+            <input type="file" class="hidden" id="csv-upload">
+            <label for="csv-upload" class="inline-block bg-gray-700 hover:bg-gray-600 py-2 px-6 rounded-lg cursor-pointer transition-colors">Choose File</label>
+          </div>
+          <button id="import-csv" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-3 rounded-lg transition-colors">
+            Import Data
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+  // --- Add Member Form ---
+  const classColors = {
+    "Bare Hand": "bg-red-500",
+    "Sword & Shield": "bg-blue-500",
+    "Battle Staff": "bg-purple-500",
+    "Battle Shield": "bg-green-500",
+    "Great Sword": "bg-yellow-500",
+    "Staff": "bg-indigo-500",
+    "Dagger": "bg-pink-500",
+    "Bow": "bg-teal-500",
+    "Crossbow": "bg-orange-500"
+  };
+
+  document.getElementById('add-member-form').addEventListener('submit', e => {
+    e.preventDefault();
+    const name = document.getElementById('member-name').value.trim();
+    const className = document.getElementById('member-class').value;
+    const cp = parseInt(document.getElementById('member-cp').value);
+    const avatar = document.getElementById('member-avatar').value || "http://static.photos/fantasy/200x200/default";
+
+    db.collection('members').add({
+      name,
+      class: className,
+      classColor: classColors[className],
+      cp,
+      growth: 0,
+      avatar
+    }).then(() => {
+      alert('Member added successfully!');
+      location.reload();
+    }).catch(err => alert('Error adding member: ' + err));
+  });
+
+  // --- CSV Import ---
+  document.getElementById('import-csv').addEventListener('click', () => {
+    const file = document.getElementById('csv-upload').files[0];
+    if (!file) return alert('Please select a CSV file first.');
+
+    const reader = new FileReader();
+    reader.onload = e => {
+      const text = e.target.result;
+      const rows = text.split('\n');
+      rows.forEach((row, index) => {
+        if (index === 0) return; // skip header
+        const [name, className, cp, avatar] = row.split(',');
+        if (!name || !className || !cp) return;
+        db.collection('members').add({
+          name: name.trim(),
+          class: className.trim(),
+          classColor: classColors[className.trim()] || 'bg-gray-500',
+          cp: parseInt(cp),
+          growth: 0,
+          avatar: avatar?.trim() || "http://static.photos/fantasy/200x200/default"
+        });
+      });
+      alert('CSV import completed!');
+      location.reload();
+    };
+    reader.readAsText(file);
   });
 </script>
 </body>
